[gd_scene load_steps=21 format=2]

[ext_resource path="res://asset/sprite2D/UI/bg_main.png" type="Texture" id=1]
[ext_resource path="res://asset/sounds/frame2/voice_GioiThieu_frame2.mp3" type="AudioStream" id=2]
[ext_resource path="res://asset/sprite2D/UI/close_button.png" type="Texture" id=3]
[ext_resource path="res://asset/sprite2D/UI/bg_dialog_view.png" type="Texture" id=4]
[ext_resource path="res://asset/sprite2D/UI/grabber_toast.png" type="Texture" id=5]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://object/dialog/dialog_bottom.gd" type="Script" id=7]
[ext_resource path="res://asset/sprite2D/UI/teacher.png" type="Texture" id=8]
[ext_resource path="res://object/button/button_v2.tscn" type="PackedScene" id=9]
[ext_resource path="res://asset/sprite2D/UI/btn_arrow_cycle_green.png" type="Texture" id=10]
[ext_resource path="res://asset/sprite2D/UI/btn_next.png" type="Texture" id=11]
[ext_resource path="res://asset/sprite2D/UI/btn_prev.png" type="Texture" id=12]
[ext_resource path="res://asset/sprite2D/UI/grabber_highlight.png" type="Texture" id=13]
[ext_resource path="res://asset/sprite2D/UI/grabber_disabled.png" type="Texture" id=14]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float alpha: hint_range(0,1,0.1);

void fragment(){
	COLOR = vec4(0,0,0,alpha);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 6 )
shader_param/alpha = 0.6

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.564706, 0.564706, 0.564706, 1 )
grow_end = -7.0
thickness = 10

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0.984314, 0, 0.00392157, 1 )
thickness = 10

[node name="DiaLogBottom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="BackgroundBlack" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRectView" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -270.0
margin_right = 184.0
margin_bottom = 71.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="BackgroundDialogView" type="NinePatchRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -277.0
margin_top = -264.0
margin_right = 282.0
margin_bottom = -24.0
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundDialogView"]
margin_left = 26.0
margin_top = 16.0
margin_right = 506.0
margin_bottom = 181.0
custom_constants/separation = 8

[node name="LabelTitle" type="Label" parent="BackgroundDialogView/VBoxContainer"]
unique_name_in_owner = true
margin_right = 480.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "?????????????"
align = 1
valign = 1

[node name="LabelSub" type="Label" parent="BackgroundDialogView/VBoxContainer"]
unique_name_in_owner = true
margin_top = 34.0
margin_right = 480.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
text = "(?????)"
align = 1
valign = 1

[node name="LabelContent" type="Label" parent="BackgroundDialogView/VBoxContainer"]
unique_name_in_owner = true
margin_top = 68.0
margin_right = 480.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 4 )
text = "????????????????????????????????????
??????????????
???????????????????????????
???????????????????????????????"
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundDialogView"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 11.0
margin_right = 18.0
margin_bottom = 59.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = 18
alignment = 2

[node name="BtnReplay" parent="BackgroundDialogView/HBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_right = 48.0
margin_bottom = 48.0
texture_normal = ExtResource( 10 )

[node name="BtnClose" parent="BackgroundDialogView/HBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_left = 66.0
margin_right = 114.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundDialogView"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -221.0
margin_top = -48.0
margin_right = 184.0
margin_bottom = 23.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 25
alignment = 2

[node name="BtnPrev" parent="BackgroundDialogView/HBoxContainer2" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_right = 190.0
margin_bottom = 71.0
texture_normal = ExtResource( 12 )

[node name="BtnNext" parent="BackgroundDialogView/HBoxContainer2" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_left = 215.0
margin_right = 405.0
margin_bottom = 71.0
texture_normal = ExtResource( 11 )

[node name="Teacher" type="Sprite" parent="BackgroundDialogView"]
position = Vector2( -54, 79.7271 )
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TimeSlider" type="HSlider" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -272.0
margin_top = -21.0
margin_right = 278.0
margin_bottom = -5.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_icons/tick = ExtResource( 5 )
custom_icons/grabber_disabled = ExtResource( 14 )
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 9 )
step = 0.1
value = 100.0

[connection signal="button_up" from="BackgroundDialogView/HBoxContainer/BtnReplay" to="." method="_on_BtnReplay_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer/BtnClose" to="." method="_on_BtnClose_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer2/BtnPrev" to="." method="_on_BtnPrev_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer2/BtnNext" to="." method="_on_BtnNext_button_up"]
[connection signal="drag_ended" from="TimeSlider" to="." method="_on_TimeSlider_drag_ended"]
[connection signal="drag_started" from="TimeSlider" to="." method="_on_TimeSlider_drag_started"]
